Műsorrögzítés, megbízhatóbb üresjárati időzítés, hangkeverés a LineMixerrel (béta), műsorhozzáadó felület